@@ -644,7 +644,7 @@ class pdf_merou extends ModelePdfExpedition
 
 		if (! empty($object->tracking_number))
 		{
-			$object->GetUrlTrackingStatus($object->tracking_number);
+			$object->getUrlTrackingStatus($object->tracking_number);
 			if (! empty($object->tracking_url))
 			{
 				if ($object->shipping_method_id > 0)
