@@ -372,7 +372,7 @@ class pdf_rouget extends ModelePdfExpedition
 					// Tracking number
 					if (! empty($object->tracking_number))
 					{
-						$object->GetUrlTrackingStatus($object->tracking_number);
+						$object->getUrlTrackingStatus($object->tracking_number);
 						if (! empty($object->tracking_url))
 						{
 							if ($object->shipping_method_id > 0)
